--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,14 @@
-h1
+.button
 {
-    border: 5px solid black;
+    color: #FAF4EA;
+    background-color: #819B57;
+    border: 2px solid #819B57;
+    border-radius: 8px;
+    cursor: pointer;
+}
+.button:hover
+{
+    color: #465929;
+    background-color: transparent;
+   
 }
