--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,14 @@
 body
 {
     color: var(--color-primary-dark);
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+address
+{
+    font-style: normal;
 }
 ul
 {
@@ -17,11 +25,12 @@ ul
 /*Button*/
 .button
 {
-    colorr var;
+    color: var(--color-primary-light);
     background-color: var(--color-brand-light);
     border: 2px solid var(--color-brand-light);
     border-radius: 8px;
     cursor: pointer;
+    font-weight: 600;
 }
 .button:hover
 {
@@ -32,15 +41,21 @@ ul
 .link
 {
     color: var(--color-primary-light);
+    text-decoration: none;
 }
 .link:hover
 {
     color: var(--color-brand-light);
+    text-decoration: underline;
+    font-weight: 600;
 }
 /*Hero section*/
 .hero-title
 {
     color: var(--color-primary-light);
+    text-align: center;
+    font-size: 128px;
+    font-weight: 900;
 }
 .hero-title .accent
 {
@@ -52,8 +67,68 @@ ul
 color: var(--color-primary-light);
 background-color:var(--color-brand-light) ;
 }
-
+.advantages-item
+{
+    font-size: 20px;
+    font-weight: 300
+}
+.section-title
+{
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 1.3;
+}
 .section-title .accent
 {
 color: var(--color-brand-dark);
+}
+
+/*Traditions section*/
+.traditions-text .brand
+{
+color: var(--color-brand-light);
+font-weight: 600;
+}
+.traditions-text .uppercase
+{
+text-transform: uppercase;
+}
+
+/*Chefs section*/
+.chef-title
+{
+    font-size: 40px;
+    font-weight: 600;
+}
+
+/*Formats section*/
+.format-title
+{
+    font-size: 24;
+    font-weight: 600;
+}
+
+.format-text
+{
+    font-size: 14px;
+    font-weight: 300;
+
+}
+
+/*Footer*/
+.address-link
+{
+    color: var(--color-primary-light);
+    font-size: 16px;
+    font-weight: 300;
+    text-decoration: none;
+}
+
+.address-link:hover {
+    color: var(--color-brand-light);
+}
+
+.address-copyright
+{
+    font-size: 14px;
 }
