--- a/css/styles.css
+++ b/css/styles.css
@@ -30,9 +30,12 @@
 {
     --color-primary-dark: #31261A;
     --color-primary-light: #FAF4EA;
+    --color-secondary-dark: #A28268;
     --color-brand-dark: #465929;
-    --color-brand-light: #819B57;
+    --color-brand-normal: #819B57;
+    --color-brand-light: #CFCFBC;
 }
+
 /*Base*/
 *{
     box-sizing: border-box;
@@ -40,6 +43,7 @@
 body
 {
     color: var(--color-primary-dark);
+    background-color: var(--color-primary-light);
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     font-weight: 400;
@@ -85,8 +89,8 @@ ul
 .button
 {
     color: var(--color-primary-light);
-    background-color: var(--color-brand-light);
-    border: 2px solid var(--color-brand-light);
+    background-color: var(--color-brand-normal);
+    border: 2px solid var(--color-brand-normal);
     border-radius: 8px;
     cursor: pointer;
     font-weight: 600;
@@ -105,13 +109,13 @@ ul
 }
 .link:hover
 {
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
     text-decoration: underline;
 }
 
 /*Header*/
 .header {
-    background-color: grey;
+    background-color: lightgrey; /*Remove this*/
 }
 
 .header-container
@@ -141,6 +145,10 @@ ul
 .hero-section
 {
     padding: 272px 0;
+    background-image: url('../Images/hero-section-background.jpg');
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
 }
 .hero-title
 {
@@ -152,13 +160,13 @@ ul
 }
 .hero-title .accent
 {
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
 }
 /*Advantages section*/
 
 .advantages-section
 {
-    background-color: var(--color-brand-light);
+    background-color: var(--color-brand-normal);
     padding: 16px 0;
 }
 
@@ -181,6 +189,12 @@ ul
     font-weight: 900;
     line-height: 1.3;
 }
+
+.section-title.centered 
+{
+    text-align: center;
+}
+
 .section-title .accent
 {
 color: var(--color-brand-dark);
@@ -209,7 +223,7 @@ color: var(--color-brand-dark);
 }
 .traditions-text .brand
 {
-color: var(--color-brand-light);
+color: var(--color-brand-normal);
 font-weight: 600;
 }
 .traditions-text .uppercase
@@ -224,8 +238,19 @@ text-transform: uppercase;
 /*Chefs section*/
 .chefs-title
 {
-    margin-bottom: 80px;
+    max-width: 540px;
+    margin: 0 auto 80px;
 }
+
+.chefs-title::before,
+.chefs-title::after
+{
+    display: block;
+    width: 352px;
+    border: 2px solid var(--color-primary-light);
+    content: '';
+}
+
 .chef-title
 {
     margin-bottom: 16px;
@@ -233,6 +258,12 @@ text-transform: uppercase;
     font-weight: 600;
 }
 
+.chef-photo
+{
+    border-radius: 4px 4px 4px 200px;
+    box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-secondary-dark)
+}
+    
 /*Formats section*/
 .formats-list   
 {
@@ -247,10 +278,12 @@ text-transform: uppercase;
 
 .format-card
 {
+    height: 444px;
     padding: 24px;
     border: 1px solid gray; /*(need to change)*/
     border-radius: 16px;
     min-height: 270px; /*(need to change)*/
+    background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark) 100%);
 }
 
 .formats-title
@@ -286,10 +319,19 @@ text-transform: uppercase;
 }
 
 .address-link:hover {
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
 }
 
 .address-copyright
 {
     font-size: 14px;
+}
+
+.footer
+{
+    background-image: url('../Images/footer-background.png');
+    background-color: var(--color-primary-dark);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
