--- a/css/styles.css
+++ b/css/styles.css
@@ -304,6 +304,27 @@ text-transform: uppercase;
 
 }
 
+/*Carousel*/
+.carousel-button
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    padding: 0;
+    background-color: transparent;
+    border-radius: 50%;
+    border: 1px solid var(--color-primary-dark);
+    cursor: pointer;
+}
+
+.carousel-button:hover
+{
+    background-color: var(--color-primary-dark);
+    fill: var(--color-primary-light);
+}
+
 /*Formats section*/
 .contact-title
 {
@@ -316,6 +337,16 @@ text-transform: uppercase;
     font-size: 16px;
     font-weight: 300;
     text-decoration: none;
+}
+
+.address-icon
+{
+    fill: var(--color-primary-light);
+}
+
+.address-icon:hover
+{
+    fill: var(--color-brand-normal);
 }
 
 .address-link:hover {
