--- a/css/styles.css
+++ b/css/styles.css
@@ -37,9 +37,13 @@
 }
 
 /*Base*/
-*{
+*,
+*::before,
+*::after
+{
     box-sizing: border-box;
 }
+
 body
 {
     color: var(--color-primary-dark);
@@ -55,6 +59,12 @@ h1, h2, h3, h4, h5, h6, p
 {
     margin-top: 0;
 }
+
+a 
+{
+    display: inline-block;
+}
+
 address
 {
     font-style: normal;
@@ -242,6 +252,16 @@ text-transform: uppercase;
     margin: 0 auto 80px;
 }
 
+.chef-text p
+{
+    margin-bottom: 24px;
+}
+
+.chef-text p:last-child
+{
+    margin-bottom: 0;
+}
+
 .chefs-title::before,
 .chefs-title::after
 {
@@ -258,13 +278,38 @@ text-transform: uppercase;
     font-weight: 600;
 }
 
+.chefs-list 
+{
+    display: flex;
+    gap: 40px 30px;
+    flex-wrap: wrap;
+}
+
+.chefs-item
+{
+    flex-basis: calc((100% - 30px) / 2);
+}
+
+.chef-card 
+{
+    display: flex;
+    gap: 30px;
+}
+
 .chef-photo
 {
     border-radius: 4px 4px 4px 200px;
     box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-secondary-dark)
 }
-    
+
 /*Formats section*/
+.formats-container
+{
+    display: flex;
+    gap: 32px;
+    align-items: center;
+}
+
 .formats-list   
 {
     display: flex;
@@ -313,6 +358,7 @@ text-transform: uppercase;
     width: 44px;
     height: 44px;
     padding: 0;
+    flex-shrink: 0;
     background-color: transparent;
     border-radius: 50%;
     border: 1px solid var(--color-primary-dark);
@@ -325,12 +371,58 @@ text-transform: uppercase;
     fill: var(--color-primary-light);
 }
 
-/*Formats section*/
+/*Contact section*/
+.contact-section
+{
+    padding-bottom: 96px;
+}
+
+.contact-container
+{
+    display: flex;
+    gap: 32px;
+}
+
 .contact-title
 {
     margin-bottom: 16px;
 }
+
+.contact-map
+{
+    flex-shrink: 0;
+    border: 0;
+    border-radius: 16px;
+}
+
 /*Footer*/
+.footer
+{
+    padding: 32px 0;
+}
+
+.footer-container
+{
+    display: flex;
+    gap: 20px;
+}
+
+.footer-nav,
+.footer-address
+{
+    display: flex;
+    flex-basis: 50%;
+    gap: 20px;
+}
+
+.footer-logo,
+.footer-menu,
+.address-list,
+.addres-info
+{
+    flex-grow: 1;
+}
+
 .address-link
 {
     color: var(--color-primary-light);
