--- a/css/styles.css
+++ b/css/styles.css
@@ -248,8 +248,33 @@ text-transform: uppercase;
 /*Chefs section*/
 .chefs-title
 {
-    max-width: 540px;
     margin: 0 auto 80px;
+    position: relative;
+}
+
+.chefs-title::before,
+.chefs-title::after {
+    position: absolute;
+    bottom: 24px;
+    width: 352px;
+    border: 2px solid var(--color-brand-light);
+    content: '';
+}
+
+.chefs-title::before
+{
+    left: 0;
+}
+
+.chefs-title::after
+{
+    right: 0; 
+}
+
+.chefs-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px 30px;
 }
 
 .chef-text p
@@ -262,15 +287,6 @@ text-transform: uppercase;
     margin-bottom: 0;
 }
 
-.chefs-title::before,
-.chefs-title::after
-{
-    display: block;
-    width: 352px;
-    border: 2px solid var(--color-primary-light);
-    content: '';
-}
-
 .chef-title
 {
     margin-bottom: 16px;
@@ -278,12 +294,6 @@ text-transform: uppercase;
     font-weight: 600;
 }
 
-.chefs-list 
-{
-    display: flex;
-    gap: 40px 30px;
-    flex-wrap: wrap;
-}
 
 .chefs-item
 {
@@ -399,6 +409,34 @@ text-transform: uppercase;
 .footer
 {
     padding: 32px 0;
+    position: relative;
+    background-image: url('../Images/footer-background.png');
+    background-color: var(--color-primary-dark);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.footer::before,
+.footer::after {
+    position: absolute;
+    bottom: 0;
+    background-repeat: no-repeat;
+    content: ''
+}
+
+.footer::before {
+    width: 180px;
+    height: 120px;
+    left: 0;
+    background-image: url('../Images/decor-bread-small.png');
+}
+
+.footer::after {
+    width: 380px;
+    height: 190px;
+    right: 0;
+    background-image: url('../Images/decor-bread-large.png');
 }
 
 .footer-container
@@ -450,11 +488,39 @@ text-transform: uppercase;
     font-size: 14px;
 }
 
-.footer
+/*Modal window*/
+.backdrop
 {
-    background-image: url('../Images/footer-background.png');
-    background-color: var(--color-primary-dark);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(157, 152, 147 , 0.5);
+}
+
+.backdrop.is-hidden 
+{
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.modal
+{
+    position: relative;
+    width: 880px;
+    height: 880px;
+    background-color: var(--color-primary-light);
+    border-radius: 32px;
+}
+
+.modal-btn-close
+{
+    position: absolute;
+    top: 40px;
+    right: 40px;
 }
