--- a/css/styles.css
+++ b/css/styles.css
@@ -109,23 +109,28 @@ ul
 .button:hover
 {
     color: var(--color-brand-dark);
-    background-color: transparent;  
+    background-color: var(--color-primary-light);  
 }
 /*Link*/
 .link
 {
     color: var(--color-primary-light);
     text-decoration: none;
+    transition: color 0.3s;
 }
 .link:hover
 {
     color: var(--color-brand-normal);
-    text-decoration: underline;
 }
 
 /*Header*/
-.header {
-    background-color: lightgrey; /*Remove this*/
+.header 
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-top: 32px;
+    width: 100%;
 }
 
 .header-container
@@ -155,7 +160,13 @@ ul
 .hero-section
 {
     padding: 272px 0;
-    background-image: url('../Images/hero-section-background.jpg');
+    background-image: linear-gradient(
+        102.76deg, 
+        rgba(18, 18, 17, 0.78) 2.03%,
+        rgba(18, 18, 17, 0.6) 48.46%, 
+        rgba(18, 18, 17, 0) 90.36% 
+    ),
+        url('../Images/hero-section-background.jpg');
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
@@ -339,6 +350,12 @@ text-transform: uppercase;
     border-radius: 16px;
     min-height: 270px; /*(need to change)*/
     background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark) 100%);
+    transition: transform .03s;
+}
+
+.format-card:hover
+{
+    transform: scale(1.05);
 }
 
 .formats-title
@@ -379,6 +396,11 @@ text-transform: uppercase;
 {
     background-color: var(--color-primary-dark);
     fill: var(--color-primary-light);
+}
+
+.carousel-button.next 
+{
+    transform: rotate(180deg);
 }
 
 /*Contact section*/
@@ -499,7 +521,9 @@ text-transform: uppercase;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 20px 0;
     background-color: rgba(157, 152, 147 , 0.5);
+    transition: opacity 0.3s, visability 0.3s;
 }
 
 .backdrop.is-hidden 
@@ -512,8 +536,10 @@ text-transform: uppercase;
 .modal
 {
     position: relative;
-    width: 880px;
-    height: 880px;
+    width: 100%;
+    max-width: 880px;
+    height: 100%;
+    max-height: 880px;
     background-color: var(--color-primary-light);
     border-radius: 32px;
 }
