--- a/css/styles.css
+++ b/css/styles.css
@@ -588,6 +588,7 @@ text-transform: uppercase;
     border-color: var(--color-brand-normal);
     outline: none;
 }
+
 .form-input::placeholder
 {
     color: var(--color-secondary-dark);
@@ -621,3 +622,39 @@ text-transform: uppercase;
     color: var(--color-primary-dark);
     text-underline-offset: 2px;
 }
+
+/* Checkbox in modal window*/
+
+/*.checkbox 
+{
+    position: relative;
+}
+
+.checkbox-input
+{
+    appearance: none;
+}
+
+.checkbox-input:checked + .checkbox-label::before
+{
+    background-color: var(--color-secondary-dark);
+}
+
+.checkbox-label
+{
+    padding-left: 24px;
+}
+
+.checkbox-label::before
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 16px;
+    height: 16px;
+    margin-top: 5px;
+    border: 1px solid var(--color-brand-dark);
+    border-radius: 2px;
+    content: '';
+}
+    */
