--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,27 +1,27 @@
 .header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding-top: 32px;
-    width: 100%;
-}
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 32px;
+  width: 100%;
 
-.header-container {
+  &__container {
     display: flex;
     align-items: center;
     gap: 40px;
-}
+  }
 
-.header-nav {
+  &__nav {
     display: flex;
     align-items: center;
     flex-grow: 1;
     gap: 40px;
-}
+  }
 
-.header-menu {
+  &__menu {
     display: flex;
     flex-grow: 1;
     gap: 64px;
     justify-content: center;
+  }
 }
