--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,28 +1,25 @@
 @import './utils/fonts';
 @import './utils/variables';
 @import './base';
+@import './utils/texts.scss';
 @import './utils/utils';
 
-.section {
-  padding: 48px 0;
-}
-
-.container {
-  width: 100%;
-  max-width: 1288px;
-  margin: 0 auto;
-}
-
 @import './components/buttons';
-@import './components/links';
-@import './components/header';
-@import './components/hero-section';
-@import './components/advantages-section';
-@import './components/traditions-section';
-@import './components/_chefs-section.scss';
-@import './components/formats-section';
 @import './components/carousell-buttons';
-@import './components/contact-section';
-@import './components/footer';
-@import './components/modal-window';
-@import './components/contact-form';
+@import './components/chef-card';
+@import './components/format-card';
+@import './components/input';
+@import './components/links';
+
+@import './layouts/header';
+@import './layouts/hero-section';
+@import './layouts/advantages-section';
+@import './layouts/traditions-section';
+@import './layouts/sections';
+@import './layouts/_chefs-section.scss';
+@import './layouts/formats-section';
+@import './layouts/contact-section';
+@import './layouts/conteiner';
+@import './layouts/footer';
+@import './layouts/modal-window';
+@import './layouts/form-terms';
