Improved scss files, improved adaptive for mobile devices

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,4 +22,5 @@
 @import './layouts/conteiner';
 @import './layouts/footer';
 @import './layouts/modal-window';
+@import './layouts/mobile-menu';
 @import './layouts/form-terms';
