--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,17 +2,22 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    color: var(--color-primary-dark);
-    background-color: var(--color-primary-light);
-    font-family: 'Poppins', sans-serif;
+  color: var(--color-primary-dark);
+  background-color: var(--color-primary-light);
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  margin: 0;
+
+  @media screen and (min-width: $bp-tablet) {
     font-size: 18px;
     font-weight: 400;
-    line-height: 1.5;
-    margin: 0;
+  }
 }
 
 h1,
@@ -22,19 +27,19 @@ h4,
 h5,
 h6,
 p {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 a {
-    display: inline-block;
+  display: inline-block;
 }
 
 address {
-    font-style: normal;
+  font-style: normal;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+  margin: 21px;
+  padding: 0;
+  list-style-type: none;
 }
