--- a/scss/layouts/_advantages-section.scss
+++ b/scss/layouts/_advantages-section.scss
@@ -1,16 +1,34 @@
 .advantages-section {
-  background-color: var(--color-brand-normal);
   padding: 16px 0;
+
+  @media screen and (min-width: $bp-desktop) {
+    background-color: var(--color-brand-normal);
+  }
 
   &__list {
     display: flex;
-    justify-content: space-between;
-    gap: 40px;
+    flex-direction: column;
+    gap: 16px;
+    padding: 24px 40px;
+    background-color: var(--color-brand-light);
+    border-radius: 24px;
+
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 40px;
+      background-color: transparent;
+      padding: 0;
+    }
   }
 
   &__item {
-    color: var(--color-primary-light);
-    font-size: 20px;
+    font-size: 14px;
     font-weight: 300;
+
+    @media screen and (min-width: $bp-tablet) {
+      color: var(--color-primary-light);
+      font-size: 20px;
+    }
   }
 }
